examples/neg/nil1.pcl
program nil1;

begin
  nil^;
end.
